# ros_trilux

./: CMakeLists.txt  LICENSE  package.xml  readme.md
.github/workflows/: main.yml
ros_trilux/: CMakeLists.txt  package.xml  readme.md
ros_trilux/include/: trilux_node.h
ros_trilux/include/trilux/: trilux_node.h  trilux_protocol.h  trilux_serial.h
ros_trilux/launch/: trilux_measure.launch
ros_trilux/src/: trilux_node.cpp
ros_trilux/src/examples/: single_shot.cpp
ros_trilux_msgs/: CMakeLists.txt  package.xml
ros_trilux_msgs/msg/: Measurement.msg
ros_trilux_msgs/srv/: EnableAnalog.srv  EnableReporting.srv  EnableSingleShot.srv  GetMeasurement.srv  Reboot.srv  SaveSetup.srv  SetRate.srv  StopStartMeasurementsSrv.srv
